force-app/main/objects/MS_Queues__mdt.object
<CustomObject>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_Team__c</fullName>
        <label>MS Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TA - Vocational</fullName>
                    <default>true</default>
                    <label>TA - Vocational</label>
                </value>
                <value>
                    <fullName>TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Analytics and Dashboards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MS Queues</label>
    <pluralLabel>MS Queues</pluralLabel>
</CustomObject>